@@ -37,8 +37,8 @@ $ignore{'"router ripng"'} = "ignore";
 $ignore{'"router ospf"'} = "ignore";
 $ignore{'"router ospf <0-65535>"'} = "ignore";
 $ignore{'"router ospf6"'} = "ignore";
-$ignore{'"router bgp CMD_AS_RANGE"'} = "ignore";
-$ignore{'"router bgp CMD_AS_RANGE view WORD"'} = "ignore";
+$ignore{'"router bgp <1-4294967295>"'} = "ignore";
+$ignore{'"router bgp <1-4294967295> view WORD"'} = "ignore";
 $ignore{'"router isis WORD"'} = "ignore";
 $ignore{'"router zebra"'} = "ignore";
 $ignore{'"address-family ipv4"'} = "ignore";
